<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">maskice.hr</string>

    <string name="drawer_open">otvori</string>
    <string name="drawer_close">zatvori</string>

    <string name="pocetna">Naslovnica</string>
    <string name="pretraga">Pretraži stranicu</string>
    <string name="racun">Moj račun</string>
    <string name="kosarica">Košarica</string>
    <string name="kontakt">Kontakt</string>

    <string name="mobitel">Oprema za mobitel</string>
    <string name="alcatel">Alcatel</string>
    <string name="apple">Apple</string>


    <string name="tablet">Oprema za tablet</string>
    <string name="tablet_case">Preklopne futrole</string>


    <string name="drzaci">Adapteri i Držači</string>
    <string name="punjaci">Punjači</string>
    <string name="slusalice">Slušalice</string>
    <string name="zvucnci">Zvučnici</string>
    <string name="kamera">Kamere</string>
    <string name="rac_oprema">Računalna periferija</string>
    <string name="gadgetmemorija">Gadgeti i Memorije</string>
    <string name="about">O nama</string>
    <string name="poslovn">Prodajna mjesta</string>
    <string name="velepro">Veleprodaja</string>
    <string name="othr">Ostala oprema</string>
    <string name="oaplk">O aplikaciji</string>
    <string name="refresh">Osvježi stranicu</string>


</resources>
