<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single" android:id="@+id/generalno">
        <item android:title="@string/app_name" >
            <menu >
                <item
                    android:id="@+id/homepage"
                    android:checked="true"
                    android:title="@string/pocetna" />
                <item
                    android:id="@+id/searchbox"
                    android:checked="true"
                    android:title="@string/pretraga" />
                <item
                    android:id="@+id/account"
                    android:checked="true"
                    android:title="@string/racun" />
                <item
                    android:id="@+id/cart"
                    android:checked="true"
                    android:title="@string/kosarica" />
                <item
                    android:id="@+id/contact"
                    android:checked="true"
                    android:title="@string/kontakt" />
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/phones"
        android:checkableBehavior="single" >

        <item android:title="@string/mobitel" >
                <menu >
                    <item
                        android:id="@+id/phones_alcatel"
                        android:checked="true"
                        android:title="@string/alcatel" />
                    <item
                        android:id="@+id/phones_apple"
                        android:checked="true"
                        android:title="@string/apple" />
                </menu>
            </item>

        </group>
        <group
            android:id="@+id/tablet"
            android:checkableBehavior="single"
            android:title="@string/tablet">

                <item
                    android:id="@+id/tablet_case"
                    android:checked="true"
                    android:title="@string/tablet" />

        </group>
        <item
            android:id="@+id/kamere"
            android:checked="true"
            android:title="@string/kamera" />
        <item
            android:id="@+id/drzaci"
            android:checked="true"
            android:title="@string/drzaci" />
        <item
            android:id="@+id/slus"
            android:checked="true"
            android:title="@string/slusalice" />
        <item
            android:id="@+id/zvucn"
            android:checked="true"
            android:title="@string/zvucnci" />
        <item
            android:id="@+id/gadgets"
            android:checked="true"
            android:title="@string/gadgetmemorija" />
        <item
            android:id="@+id/pc_perif"
            android:checked="true"
            android:title="@string/rac_oprema" />
        <item
            android:id="@+id/other"
            android:checked="true"
            android:title="@string/othr" />
        <item
            android:id="@+id/about_us"
            android:checked="true"
            android:title="@string/about" />
        <item
            android:id="@+id/prod_mjesta"
            android:checked="true"
            android:title="@string/poslovn" />
        <item
            android:id="@+id/veleprodaja"
            android:checked="true"
            android:title="@string/velepro" />
        <item
            android:id="@+id/about_app"
            android:checked="true"
            android:title="@string/oaplk" />
</menu>